--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -3987,7 +3987,8 @@ a[href*="shokoanime.com"] {
 
 .layout-desktop .itemDetailPage:has(.button-flat.mediaInfoItem.emby-button) .itemMiscInfo.itemMiscInfo-secondary,
 .layout-tv .itemDetailPage:has(.button-flat.mediaInfoItem.emby-button) .itemMiscInfo.itemMiscInfo-secondary {
-  padding: 1.2em;
+  position: absolute;
+  top: 37em;
 }
 
 .layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .trackSelections.focuscontainer-x,
